--- a/extension/popup.html
+++ b/extension/popup.html
@@ -35,9 +35,10 @@
         <div class="input-container">
           <textarea 
             id="ideaInput" 
-            placeholder="例如：做一个展示随机名言的网页..."
+            placeholder="描述你的想法，比如：创建一个计算斐波那契数列的函数"
             rows="4"
           ></textarea>
+        </div>
           <div class="input-actions">
             <button id="clearBtn" class="btn btn-secondary">
               <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -52,6 +53,10 @@
               </svg>
               开始构建
             </button>
+          </div>
+          
+          <div class="help-text">
+            <small>💡 快捷键：Ctrl/Cmd+Enter 执行，Ctrl/Cmd+K 聚焦输入框，Esc 清空</small>
           </div>
         </div>
       </section>
